package ru.omegapps.wisherapp.interfaces;

import android.view.View;

public interface OnMyItemClickListener {
    void onMyItemClick(int position, View v, boolean isChosen);
}
