package ru.omegapps.wisherapp.interfaces;

import android.view.View;

public interface OnMyItemLongClickListener {
    void onMyItemLongClick(int position, View v);
}
